# http-serve

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
benches/: file.rs  gzip.rs  inmem.rs
examples/: serve_dir.rs  serve_file.rs  serve_words.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: serve_nonempty.rs  should_gzip.rs
http-file/: Cargo.toml  lib.rs
src/: body.rs  chunker.rs  dir.rs  etag.rs  file.rs  gzip.rs  lib.rs  platform.rs  range.rs  serving.rs
static/: Cargo.toml  lib.rs
tests/: acceptance.rs  chunked-acceptance.rs  entity-acceptance.rs
