[package]
name = "http-serve"
version = "0.3.6"
authors = ["Scott Lamb <slamb@slamb.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "helpers for conditional GET, HEAD, byte range serving, and gzip content encoding for static files and more with hyper and tokio"
keywords = ["http", "file", "range"]
categories = ["web-programming::http-server"]
repository = "https://github.com/scottlamb/http-serve"
edition = "2018"
rust-version = "1.70"

[features]
dir = []

[package.metadata.docs.rs]
features = ["dir"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "1.0"
flate2 = "1.0.1"
futures-channel = "0.3.1"
futures-core = { version = "0.3.1", default-features = false }
futures-util = { version = "0.3.1", default-features = false }
http = "0.2.0"
http-body = "0.4"
httpdate = "1.0.0"
memchr = "2.0"
mime = "0.3.7"
pin-project = "1.0.6"
smallvec = "1.4.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.69"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["std", "winbase"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
htmlescape = "0.3"
httparse = "1.3.4"
hyper = { version = "0.14", features = ["http1", "http2", "server", "stream", "tcp"] }
mime_guess = "2.0"
nix = { version = "0.27", default-features = false, features = ["dir", "fs"] }
once_cell = "1.3"
reqwest = { version = "0.11", default-features = false, features = ["gzip"] }
socket2 = { version = "0.5.0" }
tempfile = "3.1.0"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "file"
harness = false

[[bench]]
name = "inmem"
harness = false

[[example]]
name = "serve_dir"
required-features = ["dir"]
