[package]
name = "http-serve"
version = "0.4.0-rc.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "helpers for conditional GET, HEAD, byte range serving, and gzip content encoding for static files and more with hyper and tokio"
keywords = ["http", "file", "range"]
categories = ["web-programming::http-server"]
repository = "https://github.com/scottlamb/http-serve"
edition = "2021"
rust-version = "1.79"

[features]
dir = []

[package.metadata.docs.rs]
features = ["dir"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "1.0"
flate2 = "1.0.1"
futures-core = { version = "0.3.1", default-features = false }
futures-util = { version = "0.3.1", default-features = false }
http = "1.0.0"
http-body = "1.0.0"
httpdate = "1.0.0"
memchr = "2.0"
mime = "0.3.7"
pin-project = "1.1.5"
smallvec = "1.4.0"
sync_wrapper = "1.0.1"
tokio = { version = "1.39.0", features = ["rt-multi-thread"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.69"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["errhandlingapi", "std", "winbase", "winerror"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
htmlescape = "0.3"
http-body-util = "0.1.0"
httparse = "1.3.4"
hyper = { version = "1.0.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
mime_guess = "2.0"
nix = { version = "0.29", default-features = false, features = ["dir", "fs"] }
once_cell = "1.3"
reqwest = { version = "0.12.7", default-features = false, features = ["gzip"] }
socket2 = { version = "0.5.0" }
tempfile = "3.1.0"
tokio = { version = "1.39.0", features = ["macros", "sync"] }

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "file"
harness = false

[[bench]]
name = "inmem"
harness = false

[[example]]
name = "serve_dir"
required-features = ["dir"]
