[package]
name = "http-file"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
license = "MIT"
readme = "../README.md"

[lib]
path = "lib.rs"

[dependencies]
futures = "0.1.7"
futures-cpupool = "0.1"
http-entity = { path = ".." }
hyper = { git = "https://github.com/hyperium/hyper" }
libc = "0.2.20"
log = "0.3"
mime = "0.2"
time = "0.1"
