[package]
name = "http-file"
version = "0.0.1"
authors = ["Scott Lamb <slamb@slamb.org>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
description = "Handle conditional GET, HEAD, and byte range serving for static files."
keywords = ["http", "static", "file", "range"]
categories = ["web-programming::http-server"]

[badges]
travis-ci = { repository = "scottlamb/http-entity" }

[lib]
path = "lib.rs"

[dependencies]
futures = "0.1.7"
futures-cpupool = "0.1"
http-entity = { path = ".." }
hyper = "0.11.x"
log = "0.4"
mime = "0.3"
time = "0.1"

[dev-dependencies]
tempdir = "0.3"
